# cafetasks

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
cafetasks/: Makefile  asgi.py  manage.py  settings.py  urls.py  wsgi.py
cafetasks/api/: apps.py  serializers.py  urls.py  views.py
cafetasks/cafetasks/: settings.py  urls.py
cafetasks/cafetasks/items/: apps.py  forms.py  models.py  urls.py  views.py
cafetasks/cafetasks/items/migrations/: 0001_initial.py
cafetasks/cafetasks/orders/: forms.py  urls.py  views.py
cafetasks/cafetasks/orders/migrations/: 0001_initial.py
cafetasks/cafetasks/users/: forms.py  urls.py  views.py
cafetasks/items/: admin.py  forms.py  views.py
cafetasks/orders/: admin.py  apps.py  documents.py  models.py  urls.py  views.py
cafetasks/orders/migrations/: 0002_order_created_at.py  0003_alter_order_status.py
cafetasks/statuses/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
cafetasks/statuses/migrations/: 0001_initial.py  0002_add_default_status.py
cafetasks/templates/: base.html  index.html  table.html
cafetasks/users/: admin.py
cafetasks/utils/: calculate_data.py
templates/: 404.html  base.html  detail.html  form.html  index.html  revenue.html  search.html  table.html
