[project]
name = "cafetasks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crispy-bootstrap5>=2024.10",
    "dj-database-url>=2.3.0",
    "django>=5.1.5",
    "django-bootstrap5>=24.3",
    "django-crispy-forms>=2.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
]
